--- a/app/index.html
+++ b/app/index.html
@@ -10,15 +10,67 @@
 <body>
     <div class="wrapper">
         <div class="mainContent">
-            <section class="headerSection">
+            <header class="header">
                 <div class="container">
-                    <div class="headerSectionContent">
-                        <h4 class="logoHeading">Bhagas<span class="logoHeading__colorant">kara</span>.</h4>
-                        <div>Fusce rutrum pretium lorem semper nulla.</div>
-                        <div>Vestibulum ornare cursus nisl, fermentum tincidunt libero pretium et. Maecenas interdum ligula non fermentum fringilla.</div>
+                    <div class="headerContent">
+                        <h4 class="logo logo_headerSection">Bhagas<span class="logo__colorant">kara</span>.</h4>
+                        <div class="headerContent__title">Fusce rutrum pretium lorem semper nulla.</div>
+                        <div class="headerContent__description">Vestibulum ornare cursus nisl, fermentum tincidunt libero pretium et. Maecenas interdum ligula non fermentum fringilla.</div>
+                        <nav class="headerContent__navigation">
+                            <ul class="headerContent__menu">
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/settings.png">
+                                        </div>
+                                        <div class="headerContent__menuName">About</div>
+                                    </a>
+                                </li>
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/user.png">
+                                        </div>
+                                        <div class="headerContent__menuName">Team</div>
+                                    </a>
+                                </li>
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/bubble.png">
+                                        </div>
+                                        <div class="headerContent__menuName">Services</div>
+                                    </a>
+                                </li>
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/photo.png">
+                                        </div>
+                                        <div class="headerContent__menuName">Portfolio</div>
+                                    </a>
+                                </li>
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/pen.png">
+                                        </div>
+                                        <div class="headerContent__menuName">Blog</div>
+                                    </a>
+                                </li>
+                                <li class="headerContent__menuItem">
+                                    <a href="#" class="headerContent__menuLink">
+                                        <div class="headerContent__menuPicture">
+                                            <img class="headerContent__menuImage" src="img/content/header/paperplane.png">
+                                        </div>
+                                        <div class="headerContent__menuName">Contact</div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
-            </section>
+            </header>
             <section class="navigationSection">
                 <div class="container">
 
