--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
                             <ul class="headerContent__menu">
                                 <li class="headerContent__menuItem">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/settings.png">
                                         </div>
                                         <div class="headerContent__menuName">About</div>
@@ -28,23 +28,23 @@
                                 </li>
                                 <li class="headerContent__menuItem">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/user.png">
                                         </div>
                                         <div class="headerContent__menuName">Team</div>
                                     </a>
                                 </li>
-                                <li class="headerContent__menuItem">
+                                <li class="headerContent__menuItem headerContent__menuItem_upper">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/bubble.png">
                                         </div>
                                         <div class="headerContent__menuName">Services</div>
                                     </a>
                                 </li>
-                                <li class="headerContent__menuItem">
+                                <li class="headerContent__menuItem headerContent__menuItem_upper">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/photo.png">
                                         </div>
                                         <div class="headerContent__menuName">Portfolio</div>
@@ -52,7 +52,7 @@
                                 </li>
                                 <li class="headerContent__menuItem">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/pen.png">
                                         </div>
                                         <div class="headerContent__menuName">Blog</div>
@@ -60,7 +60,7 @@
                                 </li>
                                 <li class="headerContent__menuItem">
                                     <a href="#" class="headerContent__menuLink">
-                                        <div class="headerContent__menuPicture">
+                                        <div class="headerContent__menuIcon">
                                             <img class="headerContent__menuImage" src="img/content/header/paperplane.png">
                                         </div>
                                         <div class="headerContent__menuName">Contact</div>
@@ -68,14 +68,103 @@
                                 </li>
                             </ul>
                         </nav>
+                        <a href="#" class="scrollDownLink">
+                            <img class="scrollDownLink__icon" src="img/content/header/arrow.png">
+                        </a>
                     </div>
                 </div>
             </header>
-            <section class="navigationSection">
+            <nav class="navigation">
                 <div class="container">
-
+                    <div class="navigationContent">
+                        <div class="navigation__logo">
+                            <div class="logo">Bhagas<span class="logo__colorant">kara</span>.</div>
+                        </div>
+                        <ul class="navigation__menu">
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Home</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">About</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Team</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Services</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Portfolio</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Blog</a>
+                            </li>
+                            <li class="navigation__item">
+                                <a class="navigation__link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </section>   
+            </nav>
+            <section class="sectionFeature">
+                <div class="container">
+                    <div class="featureContent">
+                        <ul class="columnsList">
+                            <li class="columnsList__column">
+                                <div class="columnsList__picture columnsList__picture_colorful">
+                                    <img class="columnsList__icon" src="img/content/sectionFeature/heart.png">
+                                </div>
+                                <div class="columnsList__name">Build with love</div>
+                                <div class="columnsList__description">Fusce facilisis velit libero, nec dignissim lacus sagittis non. Sed nec porta ante. Pellentesque habitant morbi tristique senectus et.</div>
+                            </li>
+                            <li class="columnsList__column">
+                                <div class="columnsList__picture">
+                                    <img class="columnsList__icon" src="img/content/sectionFeature//diamond.png">
+                                </div>
+                                <div class="columnsList__name">Clean and modern</div>
+                                <div class="columnsList__description">Fusce facilisis velit libero, nec dignissim lacus sagittis non. Sed nec porta ante. Pellentesque habitant morbi tristique senectus et.</div>
+                            </li>
+                            <li class="columnsList__column">
+                                <div class="columnsList__picture">
+                                    <img class="columnsList__icon" src="img/content/sectionFeature/cup.png">
+                                </div>
+                                <div class="columnsList__name">Easy to use</div>
+                                <div class="columnsList__description">Fusce facilisis velit libero, nec dignissim lacus sagittis non. Sed nec porta ante. Pellentesque habitant morbi tristique senectus et.</div>
+                            </li>
+                            <li class="columnsList__column">
+                                <div class="columnsList__picture">
+                                    <img class="columnsList__icon" src="img/content/sectionFeature/phone.png">
+                                </div>
+                                <div class="columnsList__name">Fully Responsive</div>
+                                <div class="columnsList__description">Fusce facilisis velit libero, nec dignissim lacus sagittis non. Sed nec porta ante. Pellentesque habitant morbi tristique senectus et.</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="sectionAbout">
+                <div class="container">
+                    <div class="aboutContent">
+                        <div class="sectionTitle sectionTitle_sectionAbout">
+                            <h5 class="sectionTitle__heading">About <span class="sectionTitle__colorant">Us</span></h5>
+                        </div>
+                        <div class="aboutContent__picture">
+                            <img class="aboutContent__image" src="img/content/sectionAbout/devices.png">
+                        </div>
+                        <div class="aboutContent__description">
+                            <div class="aboutContent__text">Aliquam metus n eque, bibendum sit amet porta at, consequat et enim. In ut turpis non ipsum rhoncus porttitor vel ac nunc. Maecenas interdum dignissim lorem quis auctor. Donec sit amet nulla nisl, aliquam pretium ipsum. Pellentesque sodales ipsum et enim rutrum adipiscing. Quisque tincidunt mattis sapien, vel posuere.</div>
+                            <a class="button button_sectionAbout" href="#" >Learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="sectionQuote">
+                <div class="container">
+                    <div class="quoteContent">
+                        
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </body>
