--- a/app/index.html
+++ b/app/index.html
@@ -161,7 +161,10 @@
             <section class="sectionQuote">
                 <div class="container">
                     <div class="quoteContent">
-                        
+                        <div class="quoteContent__picture">
+                            <img class="quoteContent__image" src="img/content/sectionQuote/study.png">
+                        </div>
+                        <div class="quoteContent__text">We lorem and ipsum your aliquam</div>
                     </div>
                 </div>
             </section>
